--- a/css/styles.css
+++ b/css/styles.css
@@ -15,24 +15,31 @@ footer {
     color: #DBEDF3;
     font-family: sans-serif;
 }
+
 .W {
     background-image: url("images/crash.png");
 }
+
 .A {
     background-image: url("images/kick.png");
 }
+
 .S {
     background-image: url("images/snare.png");
 }
+
 .D {
     background-image: url("images/tom1.png");
 }
+
 .J {
     background-image: url("images/tom2.png");
 }
+
 .K {
     background-image: url("images/tom3.png");
 }
+
 .L {
     background-image: url("images/tom4.png");
 }
@@ -51,9 +58,9 @@ footer {
     opacity: 0.5;
 }
 
-.red {
+/* .red {
     color: red;
-}
+} */
 
 .drum {
     outline: none;
@@ -70,5 +77,5 @@ footer {
     height: 150px;
     text-align: center;
     margin: 10px;
-    background-color: white;
+/*     background-color: white; */
 }
